--- a/cv.html
+++ b/cv.html
@@ -2,102 +2,40 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Chen Jingpiao - Resume</title>
+        <title>Shubham Goyal - Resume</title>
         <link rel="stylesheet" href="css/resume.css">
         <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700|Source+Sans+Pro:400,400i" rel="stylesheet">
     <body>
         <div class="page">
             <div class="section row">
-                <h1 class="col"><span style="font-weight:700">Chen</span> Jingpiao / 陈景飘</h1>
+                <h1 class="col"><span style="font-weight:700">Shubham</span> Goyal</h1>
                 <div class="contact-info col-right">
-                    <div>(+86) 182 1124 5085</div>
-                    <div><a href="mailto:chenjingpiao@gmail.com">chenjingpiao@gmail.com</a></div>
-                    <div><a href="https://ppiao.github.io">ppiao.github.io</a></div>
-                    <div>GitHub: <a href="https://www.github.com/ppiao">ppiao</a></div>
+                    <div>(+91) 778 098 4023</div>
+                    <div><a href="mailto:22shubh22@gmail.com">22shubh22@gmail.com</a></div>
+                    <div><a href="https://22shubh22.github.io">22shubh22.github.io</a></div>
+                    <div>GitHub: <a href="https://www.github.com/22shubh22">22shubh22</a></div>
                 </div>
             </div>
             <div class="section row">
                 <h2 class="col">Skills</h2>
                 <div class="section-text col-right row">
-		<li>Familiar with C and Linux system syscall</li>
-		<li>An Open Source enthusiast, contributed more than<a href="https://github.com/strace/strace/commits?author=ppiao"> 200 patches </a> for strace</li>
+		<li>Familiar with C++ and Application Development</li>
+		<li>An Open Source enthusiast, contributor at<a href="https://gerrit.libreoffice.org/#/q/shubham+goyal"> LibreOffice </a> </li>
 		<li>Frequent user of tools: VIM, Git, GCC, GDB, find, grep, diff, makefile etc</li>
                 </div>
             </div>
             <div class="section row">
                 <h2 class="col">Education</h2>
                 <div class="section-text col-right">
-                    <h3>Guangdong Pharmaceutical University</h3>
+                    <h3>Shri Mata Vaishno Devi University</h3>
 		    <div>Bachelor of Computer Science and Technology</div>
                     <div class="row">
-                        <div class="col light">Guangzhou, China</div>
-                        <div class="col-right light">September 2015 - June 2019	</div>
+                        <div class="col light">Jammu, India</div>
+                        <div class="col-right light">August 2016 - April 2020	</div>
                     </div>
                 </div>
             </div>
-            <div class="section row">
-                <h2 class="col">Experience</h2>
-                <div class="section-text col-right">
-		    <h3>Tencent - Technology and Engineering Group</h3>
-		    <div>Software Engineer Intern</div>
-                    <div class="row">
-                        <div class="col light">Shenzhen, China</div>
-                        <div class="col-right light">June 2018 - July 2018</div>
-                    </div>
-                </div>
-                <div class="section-text col-right">
-		    <h3>SUSE</h3>
-		    <div>Linux Developer Intern</div>
-                    <div class="row">
-                        <div class="col light">Beijing, China</div>
-                        <div class="col-right light">October 2018 - Present</div>
-                    </div>
-                </div>
-            </div>
-            <div class="section row">
-                <h2 class="col">Projects</h2>
-                <div class="section-text col-right">
-                    <div class="row">
-                        <div class="col">
-                            <h3>strace GSoC 2018: seccomp-assisted syscall filtering</h3>
-                        </div>
-                    </div>
-                    <ul class="desc">
-			    strace is a syscall tracer. SECCOMP_RET_TRACE seccomp API could be used to implement a more efficient syscall filtering. Using this technique, tracees will be stopped on entering filtered syscalls only instead of all syscalls.
-			    <li>Introduce seccomp-assisted syscall filtering into strace</li>
-			    <li>Construct BPF code to support multi-architecture and multi-personality</li>
-			    <li>Runtime check seccomp behaviour</li>
-                </div>
-                <div class="section-text col-right">
-                    <div class="row">
-                        <div class="col">
-                            <h3>strace GSoC 2017: netlink socket parsers</h3>
-                        </div>
-                    </div>
-                    <ul class="desc">
-			Netlink is a network protocol that is used to communicate between the kernel and the userspace. For example, iproute use netlink in order to configure the network stack (interfaces, addresses, routes, etc).
-			<li>Fix and merge the code by GSoC 2016</li>
-			<li>Implement protocol specific decoding of NETLINK_SOCK_DIAG,
-				NETLINK_ROUTE, NETLINK_SELINUX, NETLINK_CRYPTO, NETLINK_KOBJECT_UEVENT</li>
-			<li>Implement all the relate test</li>
-                </div>
-            </div>
-            
-            <div class="section row">
-                <h2 class="col">Honors</h2>
-                <div class="section-text col-right row">
-			<li><a href="https://summerofcode.withgoogle.com/archive/2017/projects/6190091550588928">Google Summer of Code 2017</a></li>
-			<li><a href="https://summerofcode.withgoogle.com/projects/#5194902636331008">Google Summer of Code 2018</a></li>
-                </div>
-            </div>
-            <div class="section row">
-                <h2 class="col">Personal Statement</h2>
-                <div class="section-text col-right row">
-			<li>Have strong self-learning ability, proficient in reading English document</li>
-			<li>Have experience in large project, developed good programming habits</li>
-			<li>Passion for programming, dare to accept challenges</li>
-                </div>
-            </div>
+            <!--incude projects-->
             <div class="section row">
                 <h2 class="col">Interests</h2>
                 <div class="section-text col-right row">
