--- a/cv.html
+++ b/cv.html
@@ -5,6 +5,8 @@
         <title>Shubham Goyal - Resume</title>
         <link rel="stylesheet" href="css/resume.css">
         <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700|Source+Sans+Pro:400,400i" rel="stylesheet">
+    	<script data-ad-client="ca-pub-6042289000335787" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    </head>
     <body>
         <div class="page">
             <div class="section row">
